--- a/Barbara/BE1_Anissin.html
+++ b/Barbara/BE1_Anissin.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<link rel="stylesheet" href="BE1.css">
+	<link rel="stylesheet" href="BE1_Anissin.css">
 </head>
 <body>
 	<div id="link">
