--- a/Barbara/BE1_Anissin.html
+++ b/Barbara/BE1_Anissin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Test Links</title>
 	<link rel="stylesheet" href="BE1_Anissin.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 		<a id="codefactory" href="https://lms.codefactory.live/">CodeFactory.live</a>
 		<a id="slack" href="https://slack.com/intl/de-at/">Slack.com</a>
 		<a id="stackoverflow" href="https://stackoverflow.com/">Stackoverflow.com</a>
-		<div class="w3schools"><a id="w3schools" href="https://www.w3schools.com">w3schools.com</a></div>
+		<p class="w3schools"><a id="w3schools" href="https://www.w3schools.com">w3schools.com</a></p>
 	</div>
 </body>
 </html>
