--- a/Barbara/IE2_Flexbox.html
+++ b/Barbara/IE2_Flexbox.html
@@ -40,13 +40,13 @@
 		</div>
 		<hr class="einzug">
 		<div class="second">
-			<div class="bar1">Saturated Fat 1.5g</div>
+			<div class="bar1 ee">Saturated Fat 1.5g</div>
 			<div class="bar2 aa">8%</div>
 			<div class="bar3 aa">13%</div>
 		</div>
 		<hr class="einzug">
 		<div class="second">
-			<div class="bar1">Trans Fat 0g</div>
+			<div class="bar1 ee">Trans Fat 0g</div>
 			<div class="bar2 aa"></div>
 			<div class="bar3 aa"></div>
 		</div>
@@ -70,13 +70,13 @@
 		</div>
 		<hr class="einzug">
 		<div class="second">
-			<div class="bar1">Dietary Fiber 6g</div>
+			<div class="bar1 ee">Dietary Fiber 6g</div>
 			<div class="bar2 aa">24%</div>
 			<div class="bar3 aa">24%</div>
 		</div>
 		<hr class="einzug">
 		<div class="second">
-			<div class="bar1">Sugars 11g</div>
+			<div class="bar1 ee">Sugars 11g</div>
 			<div class="bar2 aa"></div>
 			<div class="bar3 aa"></div>
 		</div>
@@ -130,7 +130,7 @@
 			<div class="column4">80g</div>
 		</div>
 		<div class="third">
-			<div class="column1">Saturated Fat</div>
+			<div class="column1 ee1">Saturated Fat</div>
 			<div class="column2">Less than</div>
 			<div class="column3">20g</div>
 			<div class="column4">25g</div>
@@ -154,7 +154,7 @@
 			<div class="column4">375g</div>
 		</div>
 		<div class="third">
-			<div class="column1">Dietry Fiber</div>
+			<div class="column1 ee1">Dietry Fiber</div>
 			<div class="column2"></div>
 			<div class="column3">25g</div>
 			<div class="column4">30g</div>
