--- a/Barbara/IE2_Flexbox.html
+++ b/Barbara/IE2_Flexbox.html
@@ -131,7 +131,7 @@
 		</div>
 		<div class="third">
 			<div class="column1 ee1">Saturated Fat</div>
-			<div class="column2">Less than</div>
+			<div class="column2 ee2">Less than</div>
 			<div class="column3">20g</div>
 			<div class="column4">25g</div>
 		</div>
@@ -155,7 +155,7 @@
 		</div>
 		<div class="third">
 			<div class="column1 ee1">Dietry Fiber</div>
-			<div class="column2"></div>
+			<div class="column2 ee2"></div>
 			<div class="column3">25g</div>
 			<div class="column4">30g</div>
 		</div>
