--- a/Challenge/website.html
+++ b/Challenge/website.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>BLABSLAB</title>
-<link rel="stylesheet" href="style.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BLABSLAB</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        @import url("https://fonts.google.com/css?family=Mansalva&display=swap");
+</style>
 </head>
+
 <body>
-
-<header>
-  <h2>BLABSLAB</h2>
-</header>
-
-<section>
-  <nav>
-    <ul>
-      <li><a href="#">Pay-as-you-go prices</a></li>
-      <li><a href="#">My BLABSLAB</a></li>
-      
-    </ul>
-  </nav>
-  
-  <article>
-   <div id="data">
-     <div id="data2">
-      666 of 1000 free MB
-
-     </div>
-   </div>
-   <br>
-   <div id="data">
-     <div id="data3">
-      750 of 1000 free minutes
-
-     </div>
-   </div>
-   <br>
-   <button type="button">Purchase more!</button>
-   
-  </article>
-</section>
-
-<footer>
-  <p>Footer</p>
-</footer>
-
+    <header>
+        <h2>BLABSLAB</h2>
+    </header>
+    <section>
+        <nav>
+            <ul>
+                <li><a href="#">Pay-as-you-go prices</a></li>
+                <li><a href="#">My BLABSLAB</a></li>
+            </ul>
+        </nav>
+        <article>
+            <center>
+                <div id="data">
+                    <div id="data2">
+                        666 of 1000 free MB
+                    </div>
+                </div>
+                <br>
+                <div id="data">
+                    <div id="data3">
+                        750 of 1000 free minutes
+                    </div>
+                </div>
+                <br>
+                <button class="button" type="button">Purchase more!</button>
+            </center>
+            <h3>New phones</h3>
+            <div id="userinfo">
+                <div class="phones">
+                    <img src="huawei.png" alt="">
+                    <img src="iphone.png" alt="">
+                    <img src="samsung.png" alt="">
+                </div>
+            </div>
+        </article>
+    </section>
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
+
 </html>
